8335977: Deoptimization fails with assert "object should be reallocated already"

Co-authored-by: Christian Hagedorn <chagedorn@openjdk.org>
Reviewed-by: thartmann, kvn, vlivanov